--- a/app/views/addProduct.scala.html
+++ b/app/views/addProduct.scala.html
@@ -21,6 +21,8 @@
                     @inputText(addProductForm("stock"), '_label -> "Stock", 'class -> "form-control")
                     @inputText(addProductForm("price"), '_label -> "Price", 'class -> "form-control")
 
+                    @inputText(addProductForm("id"), '_label -> "", 'hidden -> "hidden")
+
                     @select(
                         addProductForm("category.id"),
                         options(Category.options),
