--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -13,17 +13,20 @@
 
             <div class="row">
 
-                <div class = "col-lg-4 col-md-4 col-sm-12 col-xs-12 col-center">
-                <h4 class = "text-center">Categories</h4>
-                    <div class = "list-group">
-                        <a href="@routes.HomeController.products(0)" class = "list-group-item">All categories</a>
+                <div class = "col-lg-6 col-md-6 col-sm-12 col-xs-12 col-centered">
+                <h3 class = "text-center text-muted">Categories</h3>
+
+                        <a href="@routes.HomeController.products(0)"><button class = "btn btn-lg btn-danger">All Categories
+                           </button></a>
                         @for(c <- categories){
-                            <a href = "@routes.HomeController.products(c.getId)" class = "list-group-item">@c.getName
-                            <span class = "badge">@c.getProducts.size()</span>
+
+                            <a href = "@routes.HomeController.products(c.getId)"><button class = "btn btn-lg btn-danger">@c.getName
+                            <span class = "badge">@c.getProducts.size()</span></button>
                             </a>
                         }
-                    </div>
                 </div>
+
+                <br>
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="productbounds">
 
@@ -41,6 +44,10 @@
                                         <p class = "text-center"><a href="@routes.HomeController.deleteProduct(p.getId)"
                                         onclick="return confirmDel();">
                                             <button class = "btn btn-lg btn-danger"><span class="glyphicon glyphicon-trash thrashbutton"></span> </button>
+                                        </a>
+                                        </p>
+                                        <p class = "text-center"><a href="@routes.HomeController.updateProduct(p.getId)">
+                                            <button class = "btn btn-lg btn-danger"><span class="glyphicon glyphicon-pencil thrashbutton"></span> </button>
                                         </a>
                                         </p>
                                     }
